# Udacity-GenAI

./: .gitignore  pyproject.toml
course-1/module-12-generating-text-using-llms/exercises/starter/: generating-one-token-at-a-time-starter.ipynb
course-1/module-16-applying-peft-on-foundation-models/exercises/starter/: teach-an-llm-to-spell-with-sft-starter.ipynb
course-1/module-18-reinforcement-fine-tuning-on-foundation-models/exercises/starter/: teach-an-llm-to-spell-with-grpo-starter.ipynb
course-1/module-8-implementing-evaluations-for-generative-ai-models/exercises/starter/: gen-ai-evaluation-medley-starter.ipynb
course-1/project/: README.md
course-1/project/starter/: gen_ai_fundamentals_project_starter.ipynb
module-10-implementing-neural-networks-using-pytorch/exercises/starter/: optimizer-bakeoff-starter.ipynb
module-12-generating-text-using-llms/exercises/starter/: generating-one-token-at-a-time-starter.ipynb
project/: README.md
