[project]
name = "udacity-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evaluate>=0.4.6",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "litellm>=1.80.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.2.0",
    "torchvision>=0.24.1",
]
