[project]
name = "udacity-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.4.0",
    "evaluate>=0.4.6",
    "ipython-autotime>=0.3.2",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "litellm>=1.80.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "peft>=0.18.1",
    "ragas>=0.4.2",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "tiktoken>=0.12.0",
    "torchvision>=0.24.1",
    "trl>=0.26.2",
]
